--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   "dependencies": {
     "@liveblocks/client": "^1.12.0",
     "@liveblocks/react": "^1.12.0",
+    "@liveblocks/react-comments": "^1.12.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "fabric": "^5.3.0",
+    "lucide-react": "^0.383.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -24,6 +30,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "prettier": "^3.3.1",
+    "prettier-plugin-tailwindcss": "^0.6.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
